# WorkSurface-Bench-Anonymous

./: .env.example  .gitignore  LICENSE  PIPELINE.md  README.md  ROADMAP.md  pyproject.toml
data/: wsb_lock.json
docs/: wsb_data_provenance.md
examples/: tasks.example.jsonl
results/: ai_precheck_natural_graph_v2.py  analyze_cue_ablation.py  analyze_human_audit.py  analyze_natural_graph_v2.py  analyze_repeat_variance.py  analyze_routing_claims.py  analyze_scoring_robustness.py  annotate_natural_graph_v2_reaudit.py  audit_cross_surface_capacity.py  audit_expansion_capacity.py  build_expanded_1000_candidate.py  build_final1151_figures.py  build_natural_graph_revision.py  build_pool_2000.py  build_routing_cue_ablation.py  finalize_balanced_1000.py  finalize_expanded_1000_screen.py  finalize_multimodel_release.py  plot_figure3.py  plot_figure4.py  rebalance_cross_surface_1000.py  rewrite_quality_flags.py  run_natural_graph_v2_baselines.py  screen_strict1465_batched.py  select_final_1000.py  validate_balanced_1000.py
runner/: agents.py  backbone.py  make_tables.py  react.py  retry_errors.py  run_bench.py  sweep.py  test_react.py  tools.py
schemas/: task.schema.json
scoring/: __init__.py  answer.py  efficiency_safety.py  route_evidence.py  score_run.py  test_scoring.py
scripts/: build_lock_and_metadata.py  download_wsb_lite_en.py  fill_final1151_efficiency_budgets.py  prepare_hf_release.py
worksurface/: add_efficiency_budgets.py  augment_graph_cross.py  augment_rag_graph_cross.py  augment_tasks.py  augment_tri_surface.py  common.py  convert_graph.py  llm_client.py  (+9 more)
